--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 
   <body>
     <div id="blossom-header-container">
+      <div id="name-header">
+        <h1>Rafael Khan</h1>
+        <ul>
+          <li>Javascript developer at <a href="rangle.io">rangle.io</a></li>
+          <li>Music listener</li>
+          <li>Your heart's desire</li>
+        </ul>
+
+        <br />
+        <h6>now pls scroll down &lt;3</h6>
+      </div>
     </div>
   </body>
 </html>
