add http:// to rangle.io

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div id="name-header">
         <h1>Rafael Khan</h1>
         <ul>
-          <li>Javascript developer at <a href="rangle.io">rangle.io</a></li>
+          <li>Javascript developer at <a href="http://rangle.io">rangle.io</a></li>
           <li>Music listener</li>
           <li>Your heart's desire</li>
         </ul>
