Add blue box to bottom. (Is this cheating\?)

--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
         <h6>now pls scroll down &lt;3</h6>
       </div>
     </div>
+
+    <div id="hacker-container">
+      asd
+    </div>
   </body>
 </html>
