--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
+      rel="stylesheet">
+  
+    <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' type='text/css' href="css/index.css" />
   </head>
 
@@ -20,7 +24,20 @@
     </div>
 
     <div id="hacker-container">
-      asd
+      <div class="hacker-bg-mask">
+        <div class="content-container">
+          <div class="text-container">
+            <h1>I like to call myself a</h1>
+            <h1 class="hax">hacker,</h1>
+            <h1>or something like that.</h1>
+          </div>
+
+          <a href="http://github.com/rafkhan">
+            <i class="fa fa-github"></i>
+          </a>
+          
+        </div>
+      </div>
     </div>
   </body>
 </html>
