Add GH username

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
           <a href="http://github.com/rafkhan">
             <i class="fa fa-github"></i>
           </a>
+
+          <br />
+
+          <a href="http://github.com/rafkhan">@rafkhan</a>
           
         </div>
       </div>
