--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="content-container">
           <div class="text-container">
             <h1>I like to call myself a</h1>
-            <h1 class="hax">hacker,</h1>
+            <h1 id="hax">hacker,</h1>
             <h1>or something like that.</h1>
           </div>
 
@@ -43,5 +43,11 @@
         </div>
       </div>
     </div>
+
+    <div id="music-container">
+      
+    </div>
+
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
