--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     </div>
 
     <div id="music-container">
-      
+      <div class="music-bg-mask">
+        asd
+      </div>
     </div>
 
     <script type="text/javascript" src="app.js"></script>
