update portfolio items

--- a/index.html
+++ b/index.html
@@ -44,9 +44,33 @@
       </div>
     </div>
 
-    <div id="music-container">
-      <div class="music-bg-mask">
-        asd
+    <div id="portfolio-container">
+      <div class="portfolio-bg-mask">
+        <div class="portfolio">
+          <h1>Portfolio.</h1>
+
+          <div class="portfolio-items">
+            <a href="http://rangle.io" class="item">
+              <span class="workplace">rangle.io</span>
+              NodeJS, AngularJS, open source
+            </a>
+
+            <a href="http://www.exclaimsolutions.com/" class="item">
+              <span class="workplace">Exclaim Solutions</span>
+              Frontend. JQuery, SASS, that stuff.
+            </a>
+
+            <a href="http://www.hanen.org/" class="item">
+              <span class="workplace">The Hanen Centre</span>
+              Metrics, visualizations.
+            </a>
+
+            <a href="http://github.com/rafkhan" class="item">
+              <span class="workplace">github/rafkhan</span>
+              I guess this counts too.
+            </a>
+          </div>
+        </div>
       </div>
     </div>
 
