--- a/index.html
+++ b/index.html
@@ -74,6 +74,29 @@
       </div>
     </div>
 
+    <div id="etc">
+      <div class="bg-mask">
+        <div class="cool-stuff">
+          <h1>I like.</h1>
+          <ul>
+            <li>Clojure</li>
+            <li>Fat beats</li>
+            <li>Javascript</li>
+            <li>Open source</li>
+            <li>Functional programming</li>
+            <li class="little">and most importantly,</li>
+            <li>realizing ideas through software.</li>
+          </ul>
+        </div>
+        <div class="if-u-liek">
+          <p>If you like these too, we might be a good match.</p>
+          <h3>raf.khan.f@gmail.com</h3>
+          <h3>github.com/rafkhan</h3>
+          <h3>@raf_khan</h3>
+        </div>
+      </div>
+    </div>
+
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
