Change github username text

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
           <br />
 
-          <a href="http://github.com/rafkhan">@rafkhan</a>
+          <a href="http://github.com/rafkhan">github/rafkhan</a>
           
         </div>
       </div>
