--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="portfolio-items">
             <a href="http://rangle.io" class="item">
               <span class="workplace">rangle.io</span>
-              NodeJS, AngularJS, open source.
+              MEAN stack development, open source.
             </a>
 
             <a href="http://www.exclaimsolutions.com/" class="item">
